<resources>
    <string name="app_name">LostAndFound</string>
    <string name="by_trident">By Trident</string>
    <string name="iitbhilailogo">iitbhilailogo</string>
    <string name="applogo">applogo</string>
    <string name="already">Already a member?</string>
    <string name="login">Log-In</string>
    <string name="create">Create Your \nAcoount</string>
    <string name="join">Join Us</string>
    <string name="pressing">"By Pressing 'Join Us' You agree to our\n terms and conditions"</string>
    <string name="arrow">Back arrow image</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="face">A happy face</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam elementum mauris ante, a porta nulla tristique quis. Fusce interdum, orci non tincidunt sodales, mauris nisi tincidunt mi, eu sagittis purus ligula nec quam.</string>
</resources>