<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightwhite"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".signupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/arrow"/>
        <TextView
            android:layout_width="420dp"
            android:layout_height="wrap_content"
            android:text="@string/already"
            android:textAlignment="textEnd"
            android:textSize="20sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="20dp"
            android:text="@string/login"
            android:textStyle="bold"
            android:textColor="@color/fullwhite"
            android:id="@id/joinus"
            android:background="@drawable/loginbtn"
            android:textSize="15sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/create"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="55dp"
            android:elevation="15dp"
            android:hint="@string/your_name"
            android:inputType="text"
            android:paddingStart="20dp"
            android:background="@drawable/btn"
            android:autofillHints="" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:background="@drawable/btn"
            android:importantForAutofill="no" />
        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_marginTop="20dp"
            android:elevation="5dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:background="@drawable/btn"
            android:importantForAutofill="no" />
        <Button
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:id="@+id/joinus"
            android:text="@string/join"
            android:textColor="@color/fullwhite"
            android:textAllCaps="false"
            android:layout_marginTop="35dp"
            android:elevation="5dp"
            android:background="@drawable/joinbtn"/>
        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/pressing"
            android:layout_marginTop="25dp" />

    </LinearLayout>

</LinearLayout>