<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@color/lightwhite"
    tools:context=".loginActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="goBack"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:contentDescription="@string/arrow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold" />
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp">
            
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_baseline_tag_faces_24"
                android:contentDescription="@string/face"/>
        </LinearLayout>

        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:hint="@string/email"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:paddingStart="20dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/btn"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:hint="@string/pass"
            android:elevation="5dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:background="@drawable/btn"
            />
        <Button
            android:layout_width="300dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:background="@drawable/joinbtn"
            android:textColor="@color/fullwhite"
            android:elevation="5dp"/>
    </LinearLayout>

</LinearLayout>